# auto-grader

./: .gitignore  AGENTS.md  README.md  pyproject.toml  test_unittest_discovery_contract.py
auto_grader/: __init__.py  bubble_interpretation.py  contract_test_runner.py  critic.py  db.py  eval_harness.py  focus_preview.py  focus_regions.py  generated_exam_demo.py  generation.py  mark_profile_smoke.py  mc_db_round_trip.py  mc_layout.py  mc_opencv_demo.py  mc_page_extraction.py  mc_results_db.py  mc_results_demo_export.py  mc_review_db.py  mc_review_override.py  mc_scan_db.py  mc_scan_ingest.py  mc_scan_session.py  mc_scoring.py  mc_workflow.py  mc_workflow_gui.py  model_routing.py  narrator.py  narrator_run.py  narrator_sink.py  paper_calibration_packet.py  pdf_rendering.py  quiz5_short_answer_packets.py  quiz5_short_answer_reconstruction.py  quiz5_short_answer_scan_db.py  quiz5_short_answer_scan_session.py  quiz5_short_answer_trial_prep.py  scan_readback.py  scan_registration.py  shimmer_phases.py  short_answer_reconstruction.py  (+3 more)
docs/: bonsai_server_setup.md  eval_run_interpretation.md  focus_preview.md  integration.md  postgres_contract_decision_worksheet.md  postgres_migration_checklist.md  professor-backlog.md  project_paint_dry.md  review-authority-surfaces.md  review_surfaces.toml
eval/: focus_regions.yaml  ground_truth.yaml
scripts/: annotate_focus_regions.py  backfill_correction_history.py  compare_runs.py  correct_focus_regions_0410_dpi_bug.py  cull_zilch_reaper.py  export_mc_results_demo.py  focus_preview_renderer.py  ingest_quiz5_short_answer_scans.py  (+19 more)
(+76 files in other folders)
